--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *_full.log
 logs-and-results/lc_quad_1/oracle/run_results_basic_lc_quad_1_test-data.json.json
 *.pyc
+neuralqa/models/*.json
+neuralqa/src/engine/entity_linking/resources/indices/*/
+neuralqa/src/engine/class_identifier/resources/knowledge_graph_classes/*
+neuralqa/src/engine/class_identifier/resources/indices/*
